Fix appearance of event posts on mobile

--- a/less/forum/Post.less
+++ b/less/forum/Post.less
@@ -327,7 +327,7 @@
     }
   }
   .EventPost {
-    padding-left: 30px;
+    padding-left: 50px;
   }
   .EventPost-icon {
     font-size: 18px;
